Fix CSS on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ audio {
   height: auto;
 }
 
-.shadow {
+.main-container {
   -webkit-box-shadow: 10px 10px 119px 2px rgba(0,0,0,0.75);
   -moz-box-shadow: 10px 10px 119px 2px rgba(0,0,0,0.75);
   box-shadow: 10px 10px 119px 2px rgba(0,0,0,0.75);
